PWA-819 - fix float-right-button css to work on ie too

--- a/client/app/features/main/dashboard/menus/menus.scss
+++ b/client/app/features/main/dashboard/menus/menus.scss
@@ -8,14 +8,6 @@
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
-    padding-top:45px;
-  }
-  .floating-right-buttons{
-    position: fixed;
-    margin-top:16px;
-    right: 16px;
-    text-align: right;
-
   }
 
   .main-content-right{
